# rust-url-shortener

./: Cargo.toml  README.md  config.toml
site/: index.html.template
smf/: url-shortener.xml
src/: config.rs  filters.rs  main.rs  util.rs
