[package]
name = "url-shortener"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

[dependencies]
warp = "0.3.0"
toml = "0.5.8"
anyhow = "1.0.38"
slog = "2.7.0"
slog-term = "2.8.0"

[dependencies.serde]
version = "1.0.123"
features = [ "derive" ]

[dependencies.tokio]
version = "1.2.0"
features = [ "macros", "rt-multi-thread" ]
